--- a/templates/artist.html
+++ b/templates/artist.html
@@ -202,19 +202,19 @@
 
 {% if not profile %}
     <script type="text/javascript">
-        dispatch("{{ q|escapejs }}", 'profile', 0);
+        dispatch("{{ q|escapejs }}", 'profile', false, 0);
     </script>
 {% endif %}
 
 {% if not songs %}
     <script type="text/javascript">
-        dispatch("{{ q|escapejs }}", 'songs', 0);
+        dispatch("{{ q|escapejs }}", 'songs', true, 0);
     </script>
 {% endif %}
 
 {% if not similar %}
     <script type="text/javascript">
-        dispatch("{{ q|escapejs }}", 'similar', 0);
+        dispatch("{{ q|escapejs }}", 'similar', true, 0);
     </script>
 {% endif %}
 
