--- a/static/css/artist.css
+++ b/static/css/artist.css
@@ -1,177 +1,121 @@
-#image-banner {
+.content-title {
+    height: 200px;
+    width: 1000px;
+    /*display: inline;*/
+    margin: 0 auto;
+}
+
+#artist-image {
+    padding: 0;
+    margin: 0;
+}
+#title-image {
+    height: 200px;
+    width: 200px;
+    padding: 0;
+    margin: 0 auto;
+}
+#artist-info {
+    height: 200px;
+}
+
+.content {
     width: 100%;
-    height: 300px;
-    min-height: 300px;
-    background-color: #4475AA;
-    /*padding-top: 15px;*/
-    font-size: 43px;
-    /*text-shadow: 1px 1px 3px rgba(0,0,0, .8);*/
-    text-shadow: 1px 1px 3px rgba(255,255,255, .5);
-}
-.tile-wrapper {
-    margin: 0;
-    padding: 0;
-
-    width: 297px;
-    max-width: 297px;
-    height: 300px;
-    max-height: 300px;
-
-    overflow: hidden;
-    float: left;
-    background-color: white;
-}
-
-.tile-image {
-    /*opacity: .90;*/
-    /*filter: alpha(opacity=100); /* For IE8 and earlier */*/
-}
-
-#banner-title {
-    width: 1188px;
-    max-width: 1188px;
-    height: 50px;
-    position: absolute;
-    z-index: 1;
-    top: 270px;
-    padding: 0;
-    margin: 0;
-}
-
-#name {
-    padding: 0;
-    margin: 0;
-    font-size: 43px;
-    /*text-shadow: 1px 1px 3px rgba(0,0,0, .8);*/
-    text-shadow: 1px 1px 3px rgba(255,255,255, .5);
-    text-align: left;
-    text-indent: 30px;
-    color: white;
-    background-color: #1C2A3B;
-}
-
-.rating-box {
-    border-right: 15px solid #1C2A3B;
-    height: 115px;
-    padding-top: 14px;
-    text-shadow: 1px 1px 3px rgba(255,255,255, .5);
-}
-
-.bio-box {
-    height: 115px;
-    padding: 15px;
-    text-align: left;
-    text-indent: 15px;
-}
-
-.artist-hint {
-    font-size: 43px;
-    content: "A representation of how popular an artist or song is.";
-    /*border-bottom: 1px white dotted;*/
-    cursor: help;
-}
-
-.song-content{
-    padding: 0;
-    width: 453px;
-    /*height: 600px;*/
-
-    /*border-left: 15px solid #1C2A3B;*/
-    border-right: 15px solid #1C2A3B;
-    border-bottom: 15px solid #1C2A3B;
-    background-color: #215681;
-}
-.similar-content {
-    padding: 0;
-    width: 735px;
-    /*height: 600px;*/
-    background-color: #215681;
-    border-left: 15px solid #1C2A3B;
-    border-bottom: 15px solid #1C2A3B;
-    border-right: 15px solid #1C2A3B;
-    background-color: #215681;
-}
-
-.rank {
-    font-size: 15px;
-}
-
-
-
-#song-table {
+    width: 1465px;
+    height: 700px;
+    padding-top: 50px;
+    display: block;
     margin: 0 auto;
-}
-#similar-table {
-    text-align: left;
-    margin: 0 auto;
+    text-align: center;
 }
 
-.preview-songs-table {
-    margin: 0 auto;
-    height: 100%;
+.st {
+    font-size: 12px;
+}
+
+table#similar-table{
+    table-layout: fixed;
+    width: 950px;
+    border-style: hidden;
+    /*padding: 8px;*/
+}
+th#similar-table, td#similar-table {
+    /*overflow: hidden;*/
+    width: 150px;
+    height: 150px;
+    /*padding: 4px;*/
+}
+td#similar-table {
+    /*padding: 4px;*/
+}
+
+
+#similar-artists {
+    width: 950px;
+    /*margin-left: 200px;*/
+    display: inline-block;
+    padding: 0;
+    /*margin-left: 200px;*/
+    /*float:left;*/
+}
+#similar-artists-title {
+    font-size: 30px;
+    text-align: left;
     width: 100%;
+    margin: 0;
+    border-bottom: 2px solid white;
+    text-indent: 50px;
 }
-table.preview-songs-table td {
-    padding: 8px;
-    text-indent: 10px;
+
+.hide {
+    display:none;
 }
-table.preview-songs-table th {
-    border-bottom: 2px solid #1C2A3B !important;
-    padding-bottom: 8px;
+
+.artist-block-name {
+    position: absolute; 
+    left: 0; 
+    top: 0;
+    padding: 5px;
+    padding-left: 8px;
+    padding-right: 8px;
 }
-.preview-image-width {
-    width: 266px;
-}
-.preview-container {
-    width: 250px;
+.artist-preview-image {
     position: relative;
+    height: 150px;
     overflow: hidden;
-    margin: 0px;
-    padding: 0px;
-    vertical-align: top;
-    text-align: left;
 }
 .preview-image {
-    width: 250px;
-    height: 150px;
-    border: 2px solid #1C2A3B;
+    /*height: 125px;*/
+    /*overflow: hidden;*/
 }
-.preview-text {
-    position: absolute;
-    left: 0px;
-    bottom: 10px;
-}
-.preview-terms {
-    padding: 3px 6px;
+
+#artist-songs {
+    height: 497px;
+    width: 450px;
     display: inline-block;
-    background-color: #1C2A3B;
-    text-shadow: 1px 1px 3px rgba(255,255,255, .5);
-    width: 250px;
+    padding: 0;
+    border-bottom: 1px solid white;
 }
-.preview-name-title {
-    text-shadow: 1px 1px 1px rgba(255,255,255, .3);
-    font-size: 20px;
+#artist-songs-title {
+    font-size: 30px;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    border-bottom: 2px solid white;
+    text-indent: 50px;
 }
+.song-index {
+    width: 50px;
+    height: 45px;
 
-
-
-.banner-container {
-    background-color: #215681;
-    /*background-color: #1C2A3B;*/
 }
-
-.artist-brief-info {
-    background-color: #1C2A3B;
-    /*background-color: #215681;*/
-/*    height: 100%;
-    min-height: 100%;*/
-}
-
-.recommended-content {
-    background-color: #215681;
-    /*background-color: #1C2A3B;*/
-    height: 100%;
-    min-height: 100%;
+.song-title {
+    width: 400px;
 }
 
 
+#separator {
+    min-height: 1px;
+    min-width: 50px;
+    display: inline-block;
+}
